[tool.poetry]
name = "horseracing-prediction"
version = "0.1.0"
description = "Horse Racing Prediction Project"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pycaret = "^3.3.0"
sqlalchemy = "*"
kaleido = "0.2.1"
psycopg2-binary = "^2.9.9"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"